--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,12 @@
     "lucide-react": "^0.556.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-redux": "^9.2.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-router": "^7.10.1",
     "react-router-dom": "^7.10.1",
     "recharts": "^3.5.1",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
